--- a/pages/empleos.html
+++ b/pages/empleos.html
@@ -32,12 +32,31 @@
                 </ol>
               </nav>
         </section>
+        <div class="secciones">
+            <a href="./empleos.html"> Empleos
+                <img src="../assets/img//trabajadores.jpg" alt="Empleos" class="paginas">
+            </a>
+        </div>
         <section>
-            <div class="secciones">
-                <a href="./empleos.html"> EMPLEOS
-                    <img src="../assets/img/trabajadores.jpg" alt="Empleos" class="paginas">
-                    <img src="../assets/img/listaEmpleos.jpg" alt="Empleos">
-                </a>
+            <div class="conjunto">
+                <div>
+                    <img src="../assets/img/empleos/empleo1.jpg" alt="empleo 1">
+                </div>
+                <div>
+                    <img src="../assets/img/empleos/empleo2.jpg" alt="empleo 2">
+                </div>
+                <div>
+                    <img src="../assets/img/empleos/empleo3.jpg" alt="empleo 3">
+                </div>
+                <div>
+                    <img src="../assets/img/empleos/empleo4.jpg" alt="empleo 4">
+                </div>
+                <div>
+                    <img src="../assets/img/empleos/empleo5.jpg" alt="empleo 5">
+                </div>
+                <div>
+                    <img src="../assets/img/empleos/empleo6.jpg" alt="empleo 6">
+                </div>
             </div>
         </section>
     </main>
