--- a/pages/locales.html
+++ b/pages/locales.html
@@ -36,8 +36,29 @@
             <div class="secciones">
                 <a href="./locales.html"> LOCALES
                     <img src="../assets/img/locales.jpg" alt="Locales" class="paginas">
-                    <img src="../assets/img/propagandas.jpeg" alt="Locales">
                 </a>
+            </div>
+        </section>
+        <section>
+            <div class="conjunto">
+                <div>
+                    <img src="../assets/img/locales/local1.jpg" alt="local 1">
+                </div>
+                <div>
+                    <img src="../assets/img/locales/local2.jpg" alt="local 2">
+                </div>
+                <div>
+                    <img src="../assets/img/locales/local3.jpg" alt="local 3">
+                </div>
+                <div>
+                    <img src="../assets/img/locales/local4.jpg" alt="local 4">
+                </div>
+                <div>
+                    <img src="../assets/img/locales/local5.jpg" alt="local 5">
+                </div>
+                <div>
+                    <img src="../assets/img/locales/local6.jpg" alt="local 6">
+                </div>
             </div>
         </section>
     </main>
