--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -36,8 +36,29 @@
             <div class="secciones">
                 <a href="./servicios.html"> SERVICIOS
                     <img src="../assets/img/barrial.jpg" alt="Servicios" class="paginas">
-                    <img src="../assets/img/serviciosVarios.png"Servicios">
                 </a>
+            </div>
+        </section>
+        <section>
+            <div class="conjunto">
+                <div>
+                    <img src="../assets/img/servicios/serv1.jpg" alt="servicio 1">
+                </div>
+                <div>
+                    <img src="../assets/img/servicios/serv2.jpg" alt="servicio 2">
+                </div>
+                <div>
+                    <img src="../assets/img/servicios/serv3.jpg" alt="servicio 3">
+                </div>
+                <div>
+                    <img src="../assets/img/servicios/serv4.jpg" alt="servicio 4">
+                </div>
+                <div>
+                    <img src="../assets/img/servicios/serv5.jpg" alt="servicio 5">
+                </div>
+                <div>
+                    <img src="../assets/img/servicios/serv6.jpg" alt="servicio 6">
+                </div>
             </div>
         </section>
     </main>
