--- a/index.html
+++ b/index.html
@@ -27,46 +27,52 @@
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
-                 </form>
+                </form>
             <div class="menu">
                 <a href="./pages/servicios.html">Servicios</a>
                 <a href="./pages/locales.html">Locales</a>
                 <a href="./pages/empleos.html">Empleos</a>
                 <a href="./pages/noticias.html">Noticias</a>
             </div>
-          </nav>
+        </nav>
     </header>
     <main>
         <div class="informacionDiaria">
-            <div class="text">
+            <!--<div class="text">
                 <p>11:50 AM - 10 de abril de 2024</p>
                 <p>Temperatura 16°</p>
-            </div>
+            </div> -->
+
+            <div class="datosGenerales" id="ww_5be4f81942e45" v='1.3' loc='id' a='{"t":"horizontal","lang":"es","sl_lpl":1,"ids":["wl893"],"font":"Arial","sl_ics":"one","sl_sot":"celsius","cl_bkg":"#FFFFFF","cl_font":"#000000","cl_cloud":"#d4d4d4","cl_persp":"#2196F3","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>Más previsiones: <a href="https://oneweather.org/buenos_aires/30_days/" id="ww_5be4f81942e45_u" target="_blank">Buenos Aires 30 days weather forecast</a></div><script async src="https://app2.weatherwidget.org/js/?id=ww_5be4f81942e45"></script>
+
             <div class="ciudad">
-                <img src="../proyecto_comisi-n/assets/img/BAires.png" alt="Buenos Aires">
+                <img src="./assets/img/BAires.png" alt="Buenos Aires">
             </div>
-            <div class="cotizacion">
-                <iframe style="width: 18.75rem; height: 9.375rem;" frameborder="0" scrolling="no"
+            <div>
+                <iframe class="cotizacion" style="width: 18.75rem; height: 9.375rem;" frameborder="0" scrolling="no"
                 src="https://www.cotizacion-dolar.com.ar/recursos-webmaster/promedios/cotizacion-argentina-300x150.php">
                 </iframe>
             </div>
         </div>
         </section>
+        <br>
+        <div class="secciones">
+        <a>ULTIMAS NOTICIAS</a>
+        </div>
         <div class="notas">
             <div class="nota">
-                <h2>Noticia Barrio 1</h2>
-                <article>Cuerpo de la nota - Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio blanditiis
-                    adipisci aspernatur magni
-                    eius eos distinctio, cum minima illo nisi.
-                    </article>
-            </div>
+                <h2><a href="./pages/noticias.html">Avance médico: Terapia génica para la ceguera hereditaria:</a></h2>
+                        <article> Investigadores han desarrollado una terapia génica que revierte la ceguera hereditaria en pacientes con retinosis pigmentaria. Los resultados son prometedores y podrían cambiar la vida de millones de personas en todo el mundo.
+                        </article>
+                    </div>
+            
             <div class="nota">
-                <h2>Noticia Barrio 2</h2>
-                    <article>Cuerpo de la nota - Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio blanditiis
-                    adipisci aspernatur magni
-                    eius eos distinctio, cum minima illo nisi.</article>
+                <h2><a href="./pages/noticias.html">Elecciones en Reino Unido:</a></h2>
+                <article>El Partido Laborista logra una aplastante victoria sobre los conservadores, y Keir Starmer será el próximo primer ministro. Los laboristas registran un triunfo histórico, mientras que el Partido Conservador sufre su peor resultado histórico.
+                </article>
             </div>
             </div>
+        <br>
         <div class="accesos">
             <div class="secciones">
                 <a href="./pages/servicios.html"> SERVICIOS
