--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <footer>
     <div>
         <div class="copyright">
-            <p>Copyright - 2024</p>
+            <p>Copyright * 2024</p>
         </div>
         <div class="redesSociales">
             <a href="https://www.instagram.com/">
