--- a/index.html
+++ b/index.html
@@ -38,38 +38,38 @@
     </header>
     <main>
         <div class="informacionDiaria">
-            <!--<div class="text">
-                <p>11:50 AM - 10 de abril de 2024</p>
-                <p>Temperatura 16°</p>
-            </div> -->
+            
+            <div class="items" id="ww_5be4f81942e45" v='1.3' loc='id' a='{"t":"horizontal","lang":"es","sl_lpl":1,"ids":["wl893"],"font":"Arial","sl_ics":"one","sl_sot":"celsius","cl_bkg":"#FFFFFF","cl_font":"#000000","cl_cloud":"#d4d4d4","cl_persp":"#2196F3","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>Más previsiones: <a href="https://oneweather.org/buenos_aires/30_days/" id="ww_5be4f81942e45_u" target="_blank">Buenos Aires 30 days weather forecast</a></div><script async src="https://app2.weatherwidget.org/js/?id=ww_5be4f81942e45"></script>
 
-            <div class="datosGenerales" id="ww_5be4f81942e45" v='1.3' loc='id' a='{"t":"horizontal","lang":"es","sl_lpl":1,"ids":["wl893"],"font":"Arial","sl_ics":"one","sl_sot":"celsius","cl_bkg":"#FFFFFF","cl_font":"#000000","cl_cloud":"#d4d4d4","cl_persp":"#2196F3","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>Más previsiones: <a href="https://oneweather.org/buenos_aires/30_days/" id="ww_5be4f81942e45_u" target="_blank">Buenos Aires 30 days weather forecast</a></div><script async src="https://app2.weatherwidget.org/js/?id=ww_5be4f81942e45"></script>
-
-            <div class="ciudad">
-                <img src="./assets/img/BAires.png" alt="Buenos Aires">
-            </div>
-            <div>
+            <div class="items">
                 <iframe class="cotizacion" style="width: 18.75rem; height: 9.375rem;" frameborder="0" scrolling="no"
                 src="https://www.cotizacion-dolar.com.ar/recursos-webmaster/promedios/cotizacion-argentina-300x150.php">
                 </iframe>
             </div>
         </div>
-        </section>
+        <div class="items">
+            <img src="./assets/img/BAires.png" alt="Buenos Aires"> 
+        </div>
         <br>
-        <div class="secciones">
+        <div class="contenedor">
         <a>ULTIMAS NOTICIAS</a>
         </div>
-        <div class="notas">
-            <div class="nota">
+        <div class="contenedor">
+            <div class="item">
                 <h2><a href="./pages/noticias.html">Avance médico: Terapia génica para la ceguera hereditaria:</a></h2>
-                        <article> Investigadores han desarrollado una terapia génica que revierte la ceguera hereditaria en pacientes con retinosis pigmentaria. Los resultados son prometedores y podrían cambiar la vida de millones de personas en todo el mundo.
-                        </article>
+                <p> Investigadores han desarrollado una terapia génica que revierte la ceguera hereditaria en pacientes con retinosis pigmentaria. Los resultados son prometedores y podrían cambiar la vida de millones de personas en todo el mundo.
+                        <p>
                     </div>
             
-            <div class="nota">
+            <div class="item">
                 <h2><a href="./pages/noticias.html">Elecciones en Reino Unido:</a></h2>
-                <article>El Partido Laborista logra una aplastante victoria sobre los conservadores, y Keir Starmer será el próximo primer ministro. Los laboristas registran un triunfo histórico, mientras que el Partido Conservador sufre su peor resultado histórico.
-                </article>
+                <p>El Partido Laborista logra una aplastante victoria sobre los conservadores, y Keir Starmer será el próximo primer ministro. Los laboristas registran un triunfo histórico, mientras que el Partido Conservador sufre su peor resultado histórico.
+                    <p>
+            </div>
+            <div class="item">
+                <h2><a href="./pages/noticias.html">Lanzamiento del teléfono plegable:</a></h2>
+                <p>Samsung ha lanzado su último dispositivo, el Galaxy Fold 3, que combina la portabilidad de un teléfono con la versatilidad de una tablet plegable. Los fanáticos de la tecnología están ansiosos por probarlo.
+                    <p>
             </div>
             </div>
         <br>
