--- a/pages/empleos.html
+++ b/pages/empleos.html
@@ -38,23 +38,23 @@
             </a>
         </div>
         <section>
-            <div class="conjunto">
-                <div>
+            <div class="contenedor">
+                <div class="item">
                     <img src="../assets/img/empleos/empleo1.jpg" alt="empleo 1">
                 </div>
-                <div>
+                <div class="item">
                     <img src="../assets/img/empleos/empleo2.jpg" alt="empleo 2">
                 </div>
-                <div>
+                <div class="item">
                     <img src="../assets/img/empleos/empleo3.jpg" alt="empleo 3">
                 </div>
-                <div>
+                <div class="item">
                     <img src="../assets/img/empleos/empleo4.jpg" alt="empleo 4">
                 </div>
-                <div>
+                <div class="item">
                     <img src="../assets/img/empleos/empleo5.jpg" alt="empleo 5">
                 </div>
-                <div>
+                <div class="item">
                     <img src="../assets/img/empleos/empleo6.jpg" alt="empleo 6">
                 </div>
             </div>
