--- a/pages/locales.html
+++ b/pages/locales.html
@@ -40,23 +40,23 @@
             </div>
         </section>
         <section>
-            <div class="conjunto">
-                <div>
+            <div class="contenedor">
+                <div class="item">
                     <img src="../assets/img/locales/local1.jpg" alt="local 1">
                 </div>
-                <div>
+                <div class="item">
                     <img src="../assets/img/locales/local2.jpg" alt="local 2">
                 </div>
-                <div>
+                <div class="item">
                     <img src="../assets/img/locales/local3.jpg" alt="local 3">
                 </div>
-                <div>
+                <div class="item">
                     <img src="../assets/img/locales/local4.jpg" alt="local 4">
                 </div>
-                <div>
+                <div class="item">
                     <img src="../assets/img/locales/local5.jpg" alt="local 5">
                 </div>
-                <div>
+                <div class="item">
                     <img src="../assets/img/locales/local6.jpg" alt="local 6">
                 </div>
             </div>
