--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -40,41 +40,41 @@
                 </a>
             </div>
         <div>
-            <div class="conjunto">
-                    <div class="articulo">
-                        <h2>Avance médico: Terapia génica para la ceguera hereditaria:</h2>
-                        <article> Investigadores han desarrollado una terapia génica que revierte la ceguera hereditaria en pacientes con retinosis pigmentaria. Los resultados son prometedores y podrían cambiar la vida de millones de personas en todo el mundo.
-                        </article>
+            <div class="contenedor">
+                    <div class="item">
+                        <h2><a href="../pages/noticias.html">Avance médico: Terapia génica para la ceguera hereditaria:</a></h2>
+                        <p> Investigadores han desarrollado una terapia génica que revierte la ceguera hereditaria en pacientes con retinosis pigmentaria. Los resultados son prometedores y podrían cambiar la vida de millones de personas en todo el mundo.
+                        <p>
                         <img src="../assets//img/notis/ceguera.jpeg" alt="Avance médico: Terapia génica para la ceguera hereditaria">
                     </div>
-                    <div class="articulo">
-                        <h2>Exposición de arte contemporáneo:</h2>
-                        <article>La Bienal de Arte Contemporáneo ha abierto sus puertas en Nueva York, mostrando obras innovadoras de artistas de todo el mundo. Desde instalaciones interactivas hasta pinturas abstractas, la exposición es un festín visual.
-                        </article>
+                    <div class="item">
+                        <h2><a href="../pages/noticias.html">Exposición de arte contemporáneo:</a></h2>
+                        <p>La Bienal de Arte Contemporáneo ha abierto sus puertas en Nueva York, mostrando obras innovadoras de artistas de todo el mundo. Desde instalaciones interactivas hasta pinturas abstractas, la exposición es un festín visual.
+                        <p>
                         <img src="../assets/img/notis/arteContemporaneo.jpeg" alt="Elecciones en Reino Unido">
                     </div>
-                    <div class="articulo">
-                        <h2>Lanzamiento del teléfono plegable:</h2>
-                        <article>Samsung ha lanzado su último dispositivo, el Galaxy Fold 3, que combina la portabilidad de un teléfono con la versatilidad de una tablet plegable. Los fanáticos de la tecnología están ansiosos por probarlo.
-                        </article>
+                    <div class="item">
+                        <h2><a href="../pages/noticias.html">Lanzamiento del teléfono plegable:</h2></a>
+                        <p>Samsung ha lanzado su último dispositivo, el Galaxy Fold 3, que combina la portabilidad de un teléfono con la versatilidad de una tablet plegable. Los fanáticos de la tecnología están ansiosos por probarlo.
+                        <p>
                         <img src="../assets/img/notis/celularesPlegables.jpeg" alt="Elecciones en Reino Unido">
                     </div>
-                    <div class="articulo">
-                        <h2>Elecciones en Reino Unido:</h2>
-                        <article>El Partido Laborista logra una aplastante victoria sobre los conservadores, y Keir Starmer será el próximo primer ministro. Los laboristas registran un triunfo histórico, mientras que el Partido Conservador sufre su peor resultado histórico.
-                        </article>
+                    <div class="item">
+                        <h2><a href="../pages/noticias.html">Elecciones en Reino Unido:</h2></a>
+                        <p>El Partido Laborista logra una aplastante victoria sobre los conservadores, y Keir Starmer será el próximo primer ministro. Los laboristas registran un triunfo histórico, mientras que el Partido Conservador sufre su peor resultado histórico.
+                        <p>
                         <img src="../assets/img/notis/eleccionesUK.jpeg" alt="Elecciones en Reino Unido">
                     </div>
-                    <div class="articulo">
-                        <h2>Medio ambiente: Reserva marina en el Pacífico:</h2>
-                        <article>Las Islas Galápagos han sido designadas como una Reserva de Vida Marina, protegiendo su biodiversidad única y frágil. Esta decisión es un paso importante para preservar los ecosistemas marinos en el Pacífico.
-                        </article>
+                    <div class="item">
+                        <h2><a href="../pages/noticias.html">Medio ambiente: Reserva marina en el Pacífico:</h2></a>
+                        <p>Las Islas Galápagos han sido designadas como una Reserva de Vida Marina, protegiendo su biodiversidad única y frágil. Esta decisión es un paso importante para preservar los ecosistemas marinos en el Pacífico.
+                        <p>
                         <img src="../assets/img/notis/reservaMaritima.jpeg" alt="Elecciones en Reino Unido">
                     </div>
-                    <div class="articulo">
-                        <h2>Descubrimiento en Marte</h2>
-                        <article> Científicos de la NASA han confirmado la presencia de agua líquida bajo la superficie de Marte. Este descubrimiento podría tener implicaciones para futuras misiones espaciales y la búsqueda de vida en el planeta rojo.
-                        </article>
+                    <div class="item">
+                        <h2><a href="../pages/noticias.html">Descubrimiento en Marte:</h2></a>
+                        <p> Científicos de la NASA han confirmado la presencia de agua líquida bajo la superficie de Marte. Este descubrimiento podría tener implicaciones para futuras misiones espaciales y la búsqueda de vida en el planeta rojo.
+                        <p>
                         <img src="../assets/img/notis/marte.webp" alt="Elecciones en Reino Unido">
                     </div>
             </div>
