--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -40,23 +40,23 @@
             </div>
         </section>
         <section>
-            <div class="conjunto">
-                <div>
+            <div class="contenedor">
+                <div class="item">
                     <img src="../assets/img/servicios/serv1.jpg" alt="servicio 1">
                 </div>
-                <div>
+                <div class="item">
                     <img src="../assets/img/servicios/serv2.jpg" alt="servicio 2">
                 </div>
-                <div>
+                <div class="item">
                     <img src="../assets/img/servicios/serv3.jpg" alt="servicio 3">
                 </div>
-                <div>
+                <div class="item">
                     <img src="../assets/img/servicios/serv4.jpg" alt="servicio 4">
                 </div>
-                <div>
+                <div class="item">
                     <img src="../assets/img/servicios/serv5.jpg" alt="servicio 5">
                 </div>
-                <div>
+                <div class="item">
                     <img src="../assets/img/servicios/serv6.jpg" alt="servicio 6">
                 </div>
             </div>
